# tasty-lens

./: .gitmodules  .travis.yml  CHANGELOG.markdown  CHANGELOG.md  README.markdown  README.md  cabal-deb.config  cabal-min.config  smallcheck-lens.cabal  stack-7.10.yaml  stack-7.8.yaml  tasty-lens.cabal
Test/SmallCheck/: Iso.hs  Lens.hs  Prism.hs  Setter.hs  Traversal.hs
Test/SmallCheck/Lens/: Iso.hs  Lens.hs  Prism.hs  Setter.hs  Traversal.hs
Test/Tasty/: Lens.hs
Test/Tasty/Lens/: Iso.hs  Lens.hs  Prism.hs  Setter.hs  Traversal.hs
Test/Tasty/SmallCheck/: Iso.hs  Lens.hs  Prism.hs  Setter.hs  Traversal.hs
Test/Tasty/SmallCheck/Lens/: Iso.hs  Lens.hs  Prism.hs  Setter.hs  Traversal.hs
scripts/: deb-deps.sh
tests/: tasty.hs
