name:                smallcheck-lens
version:             0.1
synopsis:            Smallcheck tests for lens laws
description:
  A collection of properties that can be tested with @SmallCheck@, to guarantee
  that you are working with valid @Lens@es, @Setter@s, @Traversal@s, @Iso@s and
  @Prism@s.
homepage:            https://github.com/jdnavarro/smallcheck-lens
bug-reports:         https://github.com/jdnavarro/smallcheck-lens/issues
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          j@dannynavarro.net
category:            Testing, Lenses
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/jdnavarro/smallcheck-lens.git

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Test.SmallCheck.Lens
                       Test.SmallCheck.Setter
                       Test.SmallCheck.Traversal
                       Test.Tasty.SmallCheck.Lens
                       Test.Tasty.SmallCheck.Setter
                       Test.Tasty.SmallCheck.Traversal
  build-depends:       base >=4.6 && <4.9,
                       transformers,
                       lens,
                       smallcheck >= 1.1,
                       tasty,
                       tasty-smallcheck
